# EnterpriseManagement

./: CMakeLists.txt  EnterpriseManagement.sln  README.md  dep1.txt  dep2.txt
EnterpriseManagement/: CMakeLists.txt  CsvParser.cpp  CsvParser.h  CvsParser.cpp  CvsParser.h  Defines.h  Employee.cpp  Employee.h  EnterpriseManagement.cpp  EnterpriseManagement.h  EnterpriseManagement.vcxproj  EnterpriseManagement.vcxproj.filters  Main.cpp  Role.cpp  Role.h  RoleTasks.cpp  RoleTasks.h  Task.cpp  Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskStatus.h
